<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPoster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="6dp"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/basic_color"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/textViewNamePoster"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/title_item_notification"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewNamePoster"
                android:layout_alignEnd="@+id/textViewNamePoster"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/date"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewDate"
                android:layout_alignEnd="@+id/textViewNamePoster"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/time"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewCost"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewTime"
                android:layout_alignEnd="@+id/textViewTime"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/cost"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewCost"
                android:layout_alignEnd="@+id/textViewCost"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/location_poster"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewReason"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewLocation"
                android:layout_alignEnd="@+id/textViewLocation"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="-1dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/reason_cancellation_poster"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/_e67c2645037b626fa41d70408eaebde" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>