<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/faq"
            style="@style/RoundedCornerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:elevation="6dp"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:onClick="faq"
            android:stateListAnimator="@animator/button_login_selector"
            android:text="@string/faq"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:translationZ="4dp"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_documents"
            style="@style/RoundedCornerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="6dp"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:onClick="orderDocuments"
            android:stateListAnimator="@animator/button_login_selector"
            android:text="@string/registration_documents"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:translationZ="4dp"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contacts"
            style="@style/RoundedCornerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="6dp"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:stateListAnimator="@animator/button_login_selector"
            android:text="@string/contacts"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:translationZ="4dp"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/medical_examination"
            style="@style/RoundedCornerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="6dp"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:stateListAnimator="@animator/button_login_selector"
            android:text="@string/medical_examination"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:translationZ="4dp"
            app:cornerRadius="12dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>