<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    android:footerDividersEnabled="true"
    android:headerDividersEnabled="true"
    android:scrollbars="none"
    android:fadeScrollbars="false"
    tools:context=".fragment.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/icon_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageViewEmail"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_bg_login"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:singleLine="true"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_bg_login"
            android:fontFamily="sans-serif"
            android:hint="@string/currentPassword"
            android:singleLine="true"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonChangeEmail" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_bg_login"
            android:fontFamily="sans-serif"
            android:hint="@string/newPassword"
            android:singleLine="true"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCurrentPassword" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRepeatNewPassword"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_bg_login"
            android:fontFamily="sans-serif"
            android:hint="@string/repeatNewPassword"
            android:singleLine="true"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChangeEmail"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:elevation="6dp"
            android:fontFamily="@font/roboto_black"
            android:stateListAnimator="@animator/button_login_selector"
            android:text="@string/changeEmail"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:translationZ="4dp"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:elevation="6dp"
            android:fontFamily="@font/roboto_black"
            android:stateListAnimator="@animator/button_login_selector"
            android:text="@string/changedPassword"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:translationZ="4dp"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRepeatNewPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>